feat：docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf 改为 docker/setup-buildx-action@v2

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,13 +19,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup Docker buildx
-      uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      uses: docker/setup-buildx-action@v2
 
     - name: Check out code
       uses: actions/checkout@v2
 
     - name: Build and push image to ACR EE
-      run: |
+      run: 
         docker login -u $ALIYUN_REGISTRY_USER -p $ALIYUN_REGISTRY_PASSWORD $REGISTRY
         sh pull.sh
         data=`cat trigger.txt`
